--- a/overkill/index.html
+++ b/overkill/index.html
@@ -20,22 +20,6 @@ soccer uniform, soccer uniforms Canada">
 <Link href="img/canuckvb.ico" rel="Shortcut Icon">
 <link href="img/emx_nav_left.css" rel="stylesheet" type="text/css">
 
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_reloadPage(init) {  //reloads the window if Nav4 resized
-  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
-    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
-  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
-}
-MM_reloadPage(true);
-// -->
-</script>
-<style type="text/css">
-<!--
-.style2 {color: #FFFFFF}
--->
-</style>
-
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -64,14 +48,21 @@ MM_reloadPage(true);
   <img src="images/overkill_splash.jpg" width="1000" height="600" alt="Overkill" usemap="#frontpagemap" />
   <map name="frontpagemap">
     <area shape="rect" coords="0,0,1000,350" href="http://www.canuckstuff.com/store/index.php?main_page=index&cPath=140" alt="Overkill beach and volleyball wear" />
-    <area shape="rect" coords="900,360,950,440" href="http://www.facebook.com/overkillcanada" alt="Like US on facebook" target="_canuckface" />
-    <area shape="rect" coords="900,440,950,515" href="http://pinterest.com/overkillcanada" alt="Like US on pinterest" target="_canuckpint" />
-    <area shape="rect" coords="900,515,950,600" href="http://twitter.com/OverkillCAN" alt="Like US on twitter" target="_canucktwit" />
 
-    <area shape="rect" coords="10,10,40,60" href="http://www.canuckstuff.com/store/index.php?main_page=index&cPath=140" alt="Canuck Stuff OverKill Gear Store" />
+    <area shape="rect" coords="30,360,80,440" href="http://www.facebook.com/overkillcanada" alt="Like US on facebook" target="_canuckface" />
+    <area shape="rect" coords="30,440,80,515" href="http://pinterest.com/overkillcanada" alt="Like US on pinterest" target="_canuckpint" />
+    <area shape="rect" coords="30,515,80,600" href="http://twitter.com/OverkillCAN" alt="Like US on twitter" target="_canucktwit" />
+
+    <area shape="rect" coords="850,450,1000,600" href="http://www.canuckstuff.com/store/index.php?main_page=index&cPath=140" alt="Canuck Stuff OverKill Gear Store" />
+
   </map>
   </div>
-<div style="width:100%" align="center"><a href="http://www.canuckstuff.com/store/index.php?main_page=index&cPath=140">Enter Store &gt;&gt;</a></div>
+<div style="width:100%" align="center">
+	<a href="http://www.canuckstuff.com/store/index.php?main_page=index&cPath=140">Overkill Store</a>|
+    <a href="http://www.facebook.com/overkillcanada" target="_canuckface">Like US on facebook</a>|
+    <a href="http://pinterest.com/overkillcanada" target="_canuckpint">Like US on pinterest</a>|
+    <a href="http://twitter.com/OverkillCAN" target="_canucktwit">Like US on twitter</a> 
+</div>
 </td>
 <td>&nbsp;</td>
 </tr>
