--- a/canuckst/index.htm
+++ b/canuckst/index.htm
@@ -20,23 +20,6 @@ soccer uniform, soccer uniforms Canada">
 <Link href="img/canuckvb.ico" rel="Shortcut Icon">
 <link href="img/emx_nav_left.css" rel="stylesheet" type="text/css">
 
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_reloadPage(init) {  //reloads the window if Nav4 resized
-  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
-    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
-  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
-}
-MM_reloadPage(true);
-// -->
-</script>
-<style type="text/css">
-<!--
-.style2 {color: #FFFFFF}
--->
-</style>
-<script src="Scripts/AC_RunActiveContent.js" type="text/javascript"></script>
-
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -54,25 +37,88 @@ MM_reloadPage(true);
 </head>
 
 <body>
-  <!-- main page goes here-->
 <table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr><td>&nbsp;
+
+<tr><td colspan="3">&nbsp;</td></tr>
+
+<tr><td colspan="3">
+  <div align="center">
+  <!-- 
+  <b><font color=red size="20">HOLIDAY STORE HOURS: WE WILL BE CLOSED DEC 24 - JAN 3</font></b>
+  <b><font color=red size="20">OPEN FOR BUSINESS JAN 4, ONLINE STORE IS ALWAYS OPEN</font></b>
+  -->
+  <img src="img/canuckstuff_hub_info.jpg" width="1024" />
+  </div>
 </td></tr>
+
+<tr><td colspan="3">&nbsp;</td></tr>
+
 <tr>
 <td>&nbsp;</td>
-<td width="1000" height="600" >
+<td width="1024">
   <div align="center">
-  <img src="img/2014_volleyball_splash.jpg" width="1000" height="600" alt="Canuckstuff" usemap="#frontpagemap" />
+  <img src="img/canuckstuff_hub_splash.jpg" width="1024" alt="Canuckstuff" usemap="#frontpagemap" />
   <map name="frontpagemap">
-    <area shape="rect" coords="0,0,1000,600" href="store" alt="Canuck Volleyball Store" />
+
+    <area shape="rect" coords="150,200,350,420" href="http://www.canuckbadminton.com/store" alt="Canuck Badminton Store" />
+
+    <area shape="rect" coords="330,180,690,480" href="http://www.canuckstuff.com/store" alt="Canuck Volleyball Store" />
+
+    <area shape="rect" coords="720,200,920,400" href="http://www.canuckstuff.com/locations.htm" alt="Locations" />
+
+    <area shape="rect" coords="100,440,200,580" href="http://www.overkill.ca/" alt="Overkill" />
+
+    <area shape="rect" coords="250,440,370,580" href="http://www.canuckstuff.com/events.htm" alt="Events" />
+    
+    <area shape="rect" coords="400,500,480,580" href="https://www.facebook.com/home.php?clk_loc=5#!/Canuckstuff?fref=ts" 
+    	alt="Like us on facebook" target="_facebook" />
+
+   	<area shape="rect" coords="485,500,550,580" href="http://www.youtube.com/user/Canuckstuffvideos" 
+   		alt="Canuckstuff Youtube" target="_youtube" />
+
+   	<area shape="rect" coords="560,500,640,580" href="http://www.instagram.com/canuckstuff" 
+   		alt="Canuckstuff Instagram" target="_instagram" />
+ 
+    <area shape="rect" coords="660,440,780,580" href="http://uniforms.canuckstuff.com/store/" alt="Canuck Uniforms" />
+
+    <area shape="rect" coords="810,440,940,580" href="http://www.canuckstuff.com/store" alt="NBV" />
+ 
+ 
+     
   </map>
   </div>
-<div style="width:100%" align="center"><a href="store">Enter Store &gt;&gt;</a></div>
 </td>
 <td>&nbsp;</td>
 </tr>
-</table>
-<!-- end of main page -->
-</body>
 
+<tr>
+<td>&nbsp;</td>
+<td width="1024">
+  <div align="center"><b>Canuck Sports Stuff:
+	<a href="http://www.canuckbadminton.com/store">Badminton Store</a>|
+	<a href="http://www.canuckstuff.com/store">Volleyball Store</a>|
+	<a href="http://uniforms.canuckstuff.com/store">Uniforms Store</a>|
+	<a href="http://www.overkill.ca/">Overkill Store</a>|
+	<a href="http://www.canuckstuff.com/store">NBV Store</a></b>
+  </div>
+</td>
+<td>&nbsp;</td>
+</tr>
+
+<tr>
+<td>&nbsp;</td>
+<td width="1024">
+  <div align="center"><b>
+	<a href="https://www.facebook.com/home.php?clk_loc=5#!/Canuckstuff?fref=ts">Like us on facebook</a>|
+	<a href="http://www.youtube.com/user/Canuckstuffvideos">Canuck youtube channel</a>|
+	<a href="http://www.instagram.com/canuckstuff">Canuck on instagram</a>|
+	<a href="http://www.canuckstuff.com/locations.htm">Locations</a>
+  </div>
+</td>
+<td>&nbsp;</td>
+</tr>
+
+</table>
+
+</body>
 </html>
